<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:gravity="center"
            android:textSize="30dp"/>
        <EditText
            android:id="@+id/UsuarioET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/usuario"
            android:inputType="textPersonName"
            android:gravity="center"/>
        <EditText
            android:id="@+id/correoET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:gravity="center"

            />
        <EditText
            android:id="@+id/PasswordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/contrasenia"
            android:gravity="center"
            android:inputType="textPassword"
            />
        <EditText
            android:id="@+id/ConfirmPasswordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/confirmcontrasenia"
            android:inputType="textPassword"
            android:gravity="center"

            />
        <Button
            android:id="@+id/RegistrarBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_registrar_text"/>
        <TextView
            android:id="@+id/TengoCuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tengo_cuenta"/>

    </LinearLayout>

</RelativeLayout>