<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:gravity="center"
    android:layout_margin="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="15dp"
        >


        <EditText
            android:id="@+id/correoET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/correo"
            android:layout_marginBottom="15dp"/>

        <EditText
            android:id="@+id/PasswordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"

            android:hint="@string/contrasenia"
            android:layout_marginBottom="15dp"/>

        <Button
            android:id="@+id/LoginBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_login_text" />
    </LinearLayout>

</RelativeLayout>